Added the game window. Also added some temporary logic for getting to the game window. For the most part, all windows now close when a button navigating to another window is pressed. Radio buttons inside the setup window now have default selections to avoid the user not selecting an option. The game window contains a tool bar capable of closing the game window, and thus the game, and an option for looking at the rules. The game window automatically populates itself with the correct amount of buttons and text boxes based on difficulty. Comments also need to be added to the code.

--- a/GameOfNim/GameOfNim/GameOfNim.csproj
+++ b/GameOfNim/GameOfNim/GameOfNim.csproj
@@ -54,9 +54,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="GameWindow.xaml.cs">
+      <DependentUpon>GameWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SetupWindow.xaml.cs">
       <DependentUpon>SetupWindow.xaml</DependentUpon>
     </Compile>
+    <Page Include="GameWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="InstructionsWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
