Commit to accept Topher's changes

--- a/GameOfNim/GameOfNim/GameOfNim.csproj
+++ b/GameOfNim/GameOfNim/GameOfNim.csproj
@@ -54,6 +54,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="GameProcesses\NimGame.cs" />
+    <Compile Include="Models\Board.cs" />
     <Compile Include="SetupWindow.xaml.cs">
       <DependentUpon>SetupWindow.xaml</DependentUpon>
     </Compile>
