Just trying to update my stuff

--- a/GameOfNim/GameOfNim/GameOfNim.csproj
+++ b/GameOfNim/GameOfNim/GameOfNim.csproj
@@ -54,10 +54,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="GameProcesses\GameOfNimRules.cs" />
     <Compile Include="GameProcesses\NimGame.cs" />
     <Compile Include="Models\Board.cs" />
-    <Compile Include="GameOfNimRules.cs" />
-    <Compile Include="Player.cs" />
+    <Compile Include="Models\Player.cs" />
     <Compile Include="SetupWindow.xaml.cs">
       <DependentUpon>SetupWindow.xaml</DependentUpon>
     </Compile>
